# EasyInputManager

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: app.h  devicemanager.h
src/: app.cpp  devicemanager.cpp  main.cpp
